<resources>
    <string name="app_name">Fitness</string>
    
    <string name="buttom_home_item">Accueil</string>
    <string name="buttom_training_title">Training</string>
    <string name="buttom_add_sport_item">Ajouter</string>

    <!-- Page d'accueil -->
    <string name="home_page_title">A découvrir</string>
    <string name="home_page_last_sport_section">Dernier Exercice</string>

    <!-- Page de collection -->
    <string name="collection_page_title">Training exercises</string>

    <!-- Page d'ajout de plante -->
    <string name="add_sport_page_title">Ajout d\'un exercice</string>
    <string name="add_sport_page_upload_button">Charger image</string>
    <string name="add_sport_page_name_input">@string/item_sport_name</string>
    <string name="add_sport_page_description_input">@string/item_sport_description</string>

    <string-array name="add_sport_page_difficult_spinner_input">
        <item> Difficulté : Facile </item>
        <item> Difficulté : Moyenne </item>
        <item> Difficulté : Difficile </item>
    </string-array>


    <string name="add_sport_page_confirm_button">Confirmer</string>

    <!-- Fenêtre popup de détails -->
    <string name="popup_sport_name">Sport name</string>
    <string name="popup_sport_description_title">Description</string>
    <string name="popup_sport_description_subtitle">petite description</string>
    <string name="popup_sport_difficult_title">Difficulté</string>
    <string name="popup_sport_difficult_subtitle">Moyenne</string>

    <!-- Plante customisée -->
    <string name="item_sport_name">Nom exercice</string>
    <string name="item_sport_description">Description exercice</string>
</resources>